# steel-demand-forecast

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  config.yaml  pyproject.toml  run_etl.py
.claude/: launch.json
docs/: dicionario_de_dados.md  fluxo_ml.md
etl/: anfavea.py  cno.py  macroeconomia.py  performance.py  tabela_mestre.py
ml/: __init__.py  features.py  forecast.py  parametros.py  persistencia.py  plots.py  treino.py
notebooks/: exploracao.ipynb  exploracao_anfavea.ipynb  exploracao_cno.ipynb  exploracao_tabela_mestre.ipynb  pipeline_ml.ipynb  tabela_mestre.ipynb
ui/: __init__.py  dados.py  estado.py  log_streamlit.py  sessoes.py  tab_inferencia.py  tab_ingestao.py  tab_resultados.py  tab_treino.py
utils/: __init__.py  databricks_io.py  transforms.py  viz.py
